# deciduous

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.claude/commands/: context.md  decision.md
.deciduous/patches/: type-unification-tui-web.json
.github/workflows/: deploy-pages.yml  release.yml  type-check.yml
.windsurf/rules/: deciduous.md
appimage/: losselot.desktop
docs/: decision-graph-maintenance-functional-core-tea-refactor.dot  git-history.json  graph-data.json  index.html  index.md  story.html
docs/demo/: git-history.json  graph-data.json  index.html
schema/: decision-graph.schema.json
src/: db.rs  init.rs  lib.rs  main.rs  ui.html
src/analyzer/: binary.rs  mod.rs  spectral.rs
src/mp3/: frame.rs  lame.rs  mod.rs
src/report/: csv.rs  html.rs  json.rs  mod.rs
src/tui/: state.rs  types.rs
web/dist-embed/: index.html
web/src/components/: DetailPanel.tsx
web/src/hooks/: useUrlState.ts
web/src/types/: graph.ts
web/src/views/: DagView.tsx
